--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,21 @@
   --secondary-color: #CEF3FF;
   --tertiary-color: #F2F2F2;
   --quaternary-color: #A6B3E0;
-  --text-color: #2f2f2f;
+  --text-color-1: #2f2f2f;
+  --text-color-2: #603b43;
+  --text-color-3: #777777;
+
+  --primary-font: "Space Grotesk", sans-serif;
+  --secondary-font: "Space Mono", monospace;
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  width: 100%;
   height: 100vh;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .header {
@@ -24,7 +31,7 @@ body {
 }
 
 .header h1 {
-  font-family: "Space Mono", monospace;
+  font-family: var(--primary-font);
   font-weight: 700px;
   font-style: oblique;
   font-size: 44px;
@@ -42,6 +49,7 @@ body {
   height: 65vh;
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
@@ -58,25 +66,45 @@ body {
 }
 
 .column-1, .column-2, h2 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--primary-font);
+  display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
-  color: var(--text-color);
+  color: var(--text-color-2);
   font-size: 36px;
 }
 
 .distance {
   background-color: var(--primary-color);
-  width: 100px;
-  height: 100px; 
+  width: 150px;
+  height: 150px; 
+  border-radius: 8px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: "Space Mono", monospace;
+  font-family: var(--secondary-font);
   font-weight: 700;
   font-style: normal;
   font-size: 32px;
+}
+
+.button-container button {
+  width: 50px;
+  height: 50px;
+  font-size: 36px;
+  background-color: var(--secondary-color);
+  color: var(--text-color-3);
+  border: none;
+  border-radius: 8px;
+  padding: 5px 10px;
+  margin: 20px 3px 0;
+}
+
+.button-container button:hover {
+  opacity: 0.5;
+  cursor: pointer;
 }
 
 .map {
@@ -97,6 +125,7 @@ body {
   align-items: center;
   padding: 3px 20px;
   text-align: center;
+  color: var(--text-color-3);
 }
 
 @media (max-width: 768px) {
@@ -116,5 +145,4 @@ body {
     align-items: center;
     text-align: center;
   }
-
 }
